--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: "3.5"
 
 services:
   nginx:
@@ -36,6 +36,16 @@ services:
     networks:
       - app_network
     restart: always
+
+    webapp:
+      build:
+        context: ./webapp
+      container_name: webapp
+      ports:
+        - "3000:3000"
+      networks:
+        - app_network
+      restart: always
 
 volumes:
   nginx_logs:
