--- a/infra/logstash/pipeline/nginx_logs.conf
+++ b/infra/logstash/pipeline/nginx_logs.conf
@@ -1,31 +1,44 @@
 input {
   file {
     path => "/var/log/nginx/access.log"
-    start_position => "beginning"
-    sincedb_path => "/dev/null"
+    start_position => "beginning"  # Use only on the first run
+    sincedb_path => "/usr/share/logstash/data/sincedb"  # Persistent state tracking
+    ignore_older => 0
   }
 }
 
 filter {
+  # Parse the log message using the COMBINEDAPACHELOG pattern
   grok {
     match => {
       "message" => '%{COMBINEDAPACHELOG}'
     }
   }
 
+  # Rename 'clientip' to 'ip' (if applicable)
   mutate {
     rename => { "clientip" => "ip" }
+  }
+
+  # Drop logs from a specific IP address
+  if [source][address] == "172.18.0.1" or [url][original] == "/requests" {  # Replace with the IP you want to filter
+    drop { }
   }
 }
 
 output {
+  # Send processed logs to an HTTP endpoint
   http {
-    url => "http://flask-app:5000/analyze"
+    url => "http://api.thesmolentsev.ru/analyze"
     http_method => "post"
     format => "json"
   }
 
+  # Output logs to stdout for debugging
   stdout {
     codec => rubydebug
   }
 }
+
+
+
