--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: '3.5'
 
 services:
   nginx:
@@ -8,7 +8,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx_logs:/var/log/nginx
     ports:
-      - "8080:80"
+      - "80:80"
     networks:
       - app_network
     restart: always
@@ -32,20 +32,20 @@ services:
       context: ./app
     container_name: flask-app
     ports:
-      - "5000:5000"
+      - "3000:3000"
     networks:
       - app_network
     restart: always
-
-    webapp:
-      build:
-        context: ./webapp
-      container_name: webapp
-      ports:
-        - "3000:3000"
-      networks:
-        - app_network
-      restart: always
+  
+  site:
+    build:
+      context: ./webapp
+    container_name: site
+    ports:
+      - "8000:8000"
+    networks:
+      - app_network
+    restart: always
 
 volumes:
   nginx_logs:
