--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -5,11 +5,52 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name resource.thesmolentsev.ru;
 
         location / {
             root /usr/share/nginx/html;
             index index.html;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name api.thesmolentsev.ru;
+
+        location / {
+            proxy_pass http://flask-app:3000;  # Прокси на Flask
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # CORS-заголовки
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+
+            # Обработка preflight-запросов (OPTIONS)
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+        }
+    }
+
+    server {
+        listen 80;
+        server_name site.thesmolentsev.ru;
+
+        location / {
+            proxy_pass http://site:8000;  # Forward to the Next.js app running in Docker
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
