--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -18,25 +18,21 @@ http {
         server_name api.thesmolentsev.ru;
 
         location / {
+            add_header 'Access-Control-Allow-Origin' '*';  # Or specify your domain
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+                return 204;
+            }
+
             proxy_pass http://flask-app:3000;  # Прокси на Flask
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            # CORS-заголовки
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-
-            # Обработка preflight-запросов (OPTIONS)
-            if ($request_method = OPTIONS) {
-                add_header Access-Control-Allow-Origin *;
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
         }
     }
 
